--- a/index.html
+++ b/index.html
@@ -6,19 +6,12 @@
 </head>
 
 <div id="#content">
-	
 	<header>
 		<p>lorem ipsum dolor </p>
 	</header>
-
-
-	
 </div>
 
-<div id="gato">
-      
- inserting a text      lorem
-
+<div id="somediv">
 </div>
 
 
